--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-"ownerNumber": ["6281575886399@s.whatsapp.net"],
-"ownerName": ["Riy"],
-"botName": "Hinata-Md",
-"packname": "Hinata-Md",
-"author": "© Riy04",
+"ownerNumber": ["6287793236775@s.whatsapp.net"],
+"ownerName": ["MASS AJI"],
+"botName": "SXYOOBOTZV2",
+"packname": "SXYOO",
+"author": "© AJI\nRama",
 "sessionName": "session",
 "pathimg": "./media/hinata.jpg",
 
